edbs/EDBSParser.py
# Generated from EDBS.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class EDBSParser ( Parser ):

    grammarFileName = "EDBS.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'.'", "':'", "','", "'''", "<INVALID>", 
                     "'SKRIV'", "'REKN'", "'GJENTAR'", "'MEDAN'", "'OPPDATER'", 
                     "'DEFINER EIT MODUL'", "'MED'", "'INN'", "'UT'", "'SOM'", 
                     "'AVSLUT MODUL.'", "'KALL'", "'FIL'", "'i'", "'LES'", 
                     "'FERDIG.'", "'NESTE'", "'LENGDE'", "'AV'", "'\\u2013'", 
                     "'+'", "'/'", "'*'", "'='", "'<'", "'<='", "'>'", "'>='", 
                     "'('", "')'", "'++'", "'**'", "'//'", "'--'", "'IKKJE'", 
                     "'OG'", "'ELLER'", "'neste'", "'finn'", "'f\\u00F8rre'", 
                     "'tilbakestill'", "'til'", "'<tom>'", "'<linjeskift>'", 
                     "'<tomrom>'" ]

    symbolicNames = [ "<INVALID>", "PERIOD", "COLON", "COMMA", "PRIMED", 
                      "APOSTROPHE", "WRITE_KEYWORD", "CALC_KEYWORD", "REPEAT_KEYWORD", 
                      "CONDITION_KEYWORD", "UPDATE_KEYWORD", "DEF_MOULE_KEYWORD", 
                      "MODULE_PARAM_KEYWORD", "INPUT_PARAM_KEYWORD", "OUTPUT_PARAM_KEYWORD", 
                      "MODULE_BODY_KEYWORD", "EXIT_MODULE_KEYWORD", "CALL_MODULE_KEYWORD", 
                      "FILE_KEYWORD", "IN_KEYWORD", "READ_KEYWORD", "FINISH_KEYWORD", 
                      "NEXT_KEYWORD", "LENGTH_KEYWORD", "OF_KEYWORD", "OP_SUB", 
                      "OP_ADD", "OP_DIV", "OP_MUL", "COMP_EQL", "COMP_LT", 
                      "COMP_LEQ", "COMP_GT", "COMP_GEQ", "OPEN_PAREN", "CLOSE_PAREN", 
                      "SOP_CONCAT", "SOP_REPEAT", "SOP_SPLIT", "SOP_SUBSTR", 
                      "BOP_NOT", "BOP_AND", "BOP_OR", "LOP_NEXT", "LOP_FIND", 
                      "LOP_BACK", "LOP_RESET", "LOP_RESET_IDX", "NULL_CHAR", 
                      "NEWLINE_CHAR", "WHITESPACE_CHAR", "STRING", "IDENTIFIER", 
                      "NUMBER", "COMMENT", "NEWLINE", "WHITESPACE" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_fin_stmt = 2
    RULE_write_stmt = 3
    RULE_write_arg = 4
    RULE_calc_stmt = 5
    RULE_cond_stmt = 6
    RULE_bool_op = 7
    RULE_expr_op = 8
    RULE_str_op = 9
    RULE_len_op = 10
    RULE_list_op = 11
    RULE_call_mod_op = 12
    RULE_def_module_op = 13
    RULE_while_stmt = 14
    RULE_update_stmt = 15
    RULE_read_assgn = 16
    RULE_read_file_stmt = 17

    ruleNames =  [ "program", "statement", "fin_stmt", "write_stmt", "write_arg", 
                   "calc_stmt", "cond_stmt", "bool_op", "expr_op", "str_op", 
                   "len_op", "list_op", "call_mod_op", "def_module_op", 
                   "while_stmt", "update_stmt", "read_assgn", "read_file_stmt" ]

    EOF = Token.EOF
    PERIOD=1
    COLON=2
    COMMA=3
    PRIMED=4
    APOSTROPHE=5
    WRITE_KEYWORD=6
    CALC_KEYWORD=7
    REPEAT_KEYWORD=8
    CONDITION_KEYWORD=9
    UPDATE_KEYWORD=10
    DEF_MOULE_KEYWORD=11
    MODULE_PARAM_KEYWORD=12
    INPUT_PARAM_KEYWORD=13
    OUTPUT_PARAM_KEYWORD=14
    MODULE_BODY_KEYWORD=15
    EXIT_MODULE_KEYWORD=16
    CALL_MODULE_KEYWORD=17
    FILE_KEYWORD=18
    IN_KEYWORD=19
    READ_KEYWORD=20
    FINISH_KEYWORD=21
    NEXT_KEYWORD=22
    LENGTH_KEYWORD=23
    OF_KEYWORD=24
    OP_SUB=25
    OP_ADD=26
    OP_DIV=27
    OP_MUL=28
    COMP_EQL=29
    COMP_LT=30
    COMP_LEQ=31
    COMP_GT=32
    COMP_GEQ=33
    OPEN_PAREN=34
    CLOSE_PAREN=35
    SOP_CONCAT=36
    SOP_REPEAT=37
    SOP_SPLIT=38
    SOP_SUBSTR=39
    BOP_NOT=40
    BOP_AND=41
    BOP_OR=42
    LOP_NEXT=43
    LOP_FIND=44
    LOP_BACK=45
    LOP_RESET=46
    LOP_RESET_IDX=47
    NULL_CHAR=48
    NEWLINE_CHAR=49
    WHITESPACE_CHAR=50
    STRING=51
    IDENTIFIER=52
    NUMBER=53
    COMMENT=54
    NEWLINE=55
    WHITESPACE=56

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FINISH_KEYWORD(self):
            return self.getToken(EDBSParser.FINISH_KEYWORD, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EDBSParser.StatementContext)
            else:
                return self.getTypedRuleContext(EDBSParser.StatementContext,i)


        def NEWLINE(self):
            return self.getToken(EDBSParser.NEWLINE, 0)

        def getRuleIndex(self):
            return EDBSParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = EDBSParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 18014398510534080) != 0):
                self.state = 36
                self.statement()
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 42
            self.match(EDBSParser.FINISH_KEYWORD)
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==55:
                self.state = 43
                self.match(EDBSParser.NEWLINE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def def_module_op(self):
            return self.getTypedRuleContext(EDBSParser.Def_module_opContext,0)


        def fin_stmt(self):
            return self.getTypedRuleContext(EDBSParser.Fin_stmtContext,0)


        def PERIOD(self):
            return self.getToken(EDBSParser.PERIOD, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(EDBSParser.NEWLINE)
            else:
                return self.getToken(EDBSParser.NEWLINE, i)

        def COMMENT(self):
            return self.getToken(EDBSParser.COMMENT, 0)

        def getRuleIndex(self):
            return EDBSParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = EDBSParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 62
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.def_module_op()
                pass
            elif token in [6, 7, 8, 10, 20]:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.fin_stmt()
                self.state = 48
                self.match(EDBSParser.PERIOD)
                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==55:
                    self.state = 49
                    self.match(EDBSParser.NEWLINE)
                    self.state = 54
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [54]:
                self.enterOuterAlt(localctx, 3)
                self.state = 55
                self.match(EDBSParser.COMMENT)
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==55:
                    self.state = 56
                    self.match(EDBSParser.NEWLINE)
                    self.state = 61
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Fin_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def while_stmt(self):
            return self.getTypedRuleContext(EDBSParser.While_stmtContext,0)


        def update_stmt(self):
            return self.getTypedRuleContext(EDBSParser.Update_stmtContext,0)


        def write_stmt(self):
            return self.getTypedRuleContext(EDBSParser.Write_stmtContext,0)


        def read_assgn(self):
            return self.getTypedRuleContext(EDBSParser.Read_assgnContext,0)


        def calc_stmt(self):
            return self.getTypedRuleContext(EDBSParser.Calc_stmtContext,0)


        def read_file_stmt(self):
            return self.getTypedRuleContext(EDBSParser.Read_file_stmtContext,0)


        def getRuleIndex(self):
            return EDBSParser.RULE_fin_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFin_stmt" ):
                listener.enterFin_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFin_stmt" ):
                listener.exitFin_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFin_stmt" ):
                return visitor.visitFin_stmt(self)
            else:
                return visitor.visitChildren(self)




    def fin_stmt(self):

        localctx = EDBSParser.Fin_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_fin_stmt)
        try:
            self.state = 70
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.while_stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.update_stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 66
                self.write_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 67
                self.read_assgn()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 68
                self.calc_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 69
                self.read_file_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Write_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WRITE_KEYWORD(self):
            return self.getToken(EDBSParser.WRITE_KEYWORD, 0)

        def write_arg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EDBSParser.Write_argContext)
            else:
                return self.getTypedRuleContext(EDBSParser.Write_argContext,i)


        def getRuleIndex(self):
            return EDBSParser.RULE_write_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWrite_stmt" ):
                listener.enterWrite_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWrite_stmt" ):
                listener.exitWrite_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWrite_stmt" ):
                return visitor.visitWrite_stmt(self)
            else:
                return visitor.visitChildren(self)




    def write_stmt(self):

        localctx = EDBSParser.Write_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_write_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(EDBSParser.WRITE_KEYWORD)
            self.state = 74 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 73
                self.write_arg()
                self.state = 76 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==51 or _la==52):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Write_argContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(EDBSParser.STRING, 0)

        def IDENTIFIER(self):
            return self.getToken(EDBSParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return EDBSParser.RULE_write_arg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWrite_arg" ):
                listener.enterWrite_arg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWrite_arg" ):
                listener.exitWrite_arg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWrite_arg" ):
                return visitor.visitWrite_arg(self)
            else:
                return visitor.visitChildren(self)




    def write_arg(self):

        localctx = EDBSParser.Write_argContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_write_arg)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            _la = self._input.LA(1)
            if not(_la==51 or _la==52):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Calc_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CALC_KEYWORD(self):
            return self.getToken(EDBSParser.CALC_KEYWORD, 0)

        def IDENTIFIER(self):
            return self.getToken(EDBSParser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(EDBSParser.COLON, 0)

        def expr_op(self):
            return self.getTypedRuleContext(EDBSParser.Expr_opContext,0)


        def call_mod_op(self):
            return self.getTypedRuleContext(EDBSParser.Call_mod_opContext,0)


        def list_op(self):
            return self.getTypedRuleContext(EDBSParser.List_opContext,0)


        def str_op(self):
            return self.getTypedRuleContext(EDBSParser.Str_opContext,0)


        def getRuleIndex(self):
            return EDBSParser.RULE_calc_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCalc_stmt" ):
                listener.enterCalc_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCalc_stmt" ):
                listener.exitCalc_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCalc_stmt" ):
                return visitor.visitCalc_stmt(self)
            else:
                return visitor.visitChildren(self)




    def calc_stmt(self):

        localctx = EDBSParser.Calc_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_calc_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(EDBSParser.CALC_KEYWORD)
            self.state = 81
            self.match(EDBSParser.IDENTIFIER)
            self.state = 82
            self.match(EDBSParser.COLON)
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 83
                self.expr_op(0)
                pass

            elif la_ == 2:
                self.state = 84
                self.call_mod_op()
                pass

            elif la_ == 3:
                self.state = 85
                self.list_op()
                pass

            elif la_ == 4:
                self.state = 86
                self.str_op(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Cond_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONDITION_KEYWORD(self):
            return self.getToken(EDBSParser.CONDITION_KEYWORD, 0)

        def expr_op(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EDBSParser.Expr_opContext)
            else:
                return self.getTypedRuleContext(EDBSParser.Expr_opContext,i)


        def cond_stmt(self):
            return self.getTypedRuleContext(EDBSParser.Cond_stmtContext,0)


        def COMP_EQL(self):
            return self.getToken(EDBSParser.COMP_EQL, 0)

        def COMP_LT(self):
            return self.getToken(EDBSParser.COMP_LT, 0)

        def COMP_LEQ(self):
            return self.getToken(EDBSParser.COMP_LEQ, 0)

        def COMP_GT(self):
            return self.getToken(EDBSParser.COMP_GT, 0)

        def COMP_GEQ(self):
            return self.getToken(EDBSParser.COMP_GEQ, 0)

        def getRuleIndex(self):
            return EDBSParser.RULE_cond_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCond_stmt" ):
                listener.enterCond_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCond_stmt" ):
                listener.exitCond_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCond_stmt" ):
                return visitor.visitCond_stmt(self)
            else:
                return visitor.visitChildren(self)




    def cond_stmt(self):

        localctx = EDBSParser.Cond_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_cond_stmt)
        try:
            self.state = 99
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.match(EDBSParser.CONDITION_KEYWORD)
                self.state = 90
                self.expr_op(0)
                self.state = 91
                self.cond_stmt()
                self.state = 92
                self.expr_op(0)
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 2)
                self.state = 94
                self.match(EDBSParser.COMP_EQL)
                pass
            elif token in [30]:
                self.enterOuterAlt(localctx, 3)
                self.state = 95
                self.match(EDBSParser.COMP_LT)
                pass
            elif token in [31]:
                self.enterOuterAlt(localctx, 4)
                self.state = 96
                self.match(EDBSParser.COMP_LEQ)
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 5)
                self.state = 97
                self.match(EDBSParser.COMP_GT)
                pass
            elif token in [33]:
                self.enterOuterAlt(localctx, 6)
                self.state = 98
                self.match(EDBSParser.COMP_GEQ)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bool_opContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOP_AND(self):
            return self.getToken(EDBSParser.BOP_AND, 0)

        def BOP_OR(self):
            return self.getToken(EDBSParser.BOP_OR, 0)

        def getRuleIndex(self):
            return EDBSParser.RULE_bool_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBool_op" ):
                listener.enterBool_op(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBool_op" ):
                listener.exitBool_op(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBool_op" ):
                return visitor.visitBool_op(self)
            else:
                return visitor.visitChildren(self)




    def bool_op(self):

        localctx = EDBSParser.Bool_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_bool_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            _la = self._input.LA(1)
            if not(_la==41 or _la==42):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_opContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return EDBSParser.RULE_expr_op

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class DivContext(Expr_opContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EDBSParser.Expr_opContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr_op(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EDBSParser.Expr_opContext)
            else:
                return self.getTypedRuleContext(EDBSParser.Expr_opContext,i)

        def OP_DIV(self):
            return self.getToken(EDBSParser.OP_DIV, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDiv" ):
                listener.enterDiv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDiv" ):
                listener.exitDiv(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDiv" ):
                return visitor.visitDiv(self)
            else:
                return visitor.visitChildren(self)


    class AddContext(Expr_opContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EDBSParser.Expr_opContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr_op(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EDBSParser.Expr_opContext)
            else:
                return self.getTypedRuleContext(EDBSParser.Expr_opContext,i)

        def OP_ADD(self):
            return self.getToken(EDBSParser.OP_ADD, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdd" ):
                listener.enterAdd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdd" ):
                listener.exitAdd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdd" ):
                return visitor.visitAdd(self)
            else:
                return visitor.visitChildren(self)


    class SubContext(Expr_opContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EDBSParser.Expr_opContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr_op(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EDBSParser.Expr_opContext)
            else:
                return self.getTypedRuleContext(EDBSParser.Expr_opContext,i)

        def OP_SUB(self):
            return self.getToken(EDBSParser.OP_SUB, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSub" ):
                listener.enterSub(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSub" ):
                listener.exitSub(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSub" ):
                return visitor.visitSub(self)
            else:
                return visitor.visitChildren(self)


    class NotContext(Expr_opContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EDBSParser.Expr_opContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def BOP_NOT(self):
            return self.getToken(EDBSParser.BOP_NOT, 0)
        def expr_op(self):
            return self.getTypedRuleContext(EDBSParser.Expr_opContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNot" ):
                listener.enterNot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNot" ):
                listener.exitNot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNot" ):
                return visitor.visitNot(self)
            else:
                return visitor.visitChildren(self)


    class LenContext(Expr_opContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EDBSParser.Expr_opContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def len_op(self):
            return self.getTypedRuleContext(EDBSParser.Len_opContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLen" ):
                listener.enterLen(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLen" ):
                listener.exitLen(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLen" ):
                return visitor.visitLen(self)
            else:
                return visitor.visitChildren(self)


    class NullContext(Expr_opContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EDBSParser.Expr_opContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NULL_CHAR(self):
            return self.getToken(EDBSParser.NULL_CHAR, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNull" ):
                listener.enterNull(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNull" ):
                listener.exitNull(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNull" ):
                return visitor.visitNull(self)
            else:
                return visitor.visitChildren(self)


    class BoolContext(Expr_opContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EDBSParser.Expr_opContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr_op(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EDBSParser.Expr_opContext)
            else:
                return self.getTypedRuleContext(EDBSParser.Expr_opContext,i)

        def bool_op(self):
            return self.getTypedRuleContext(EDBSParser.Bool_opContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBool" ):
                listener.enterBool(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBool" ):
                listener.exitBool(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBool" ):
                return visitor.visitBool(self)
            else:
                return visitor.visitChildren(self)


    class MulContext(Expr_opContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EDBSParser.Expr_opContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr_op(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EDBSParser.Expr_opContext)
            else:
                return self.getTypedRuleContext(EDBSParser.Expr_opContext,i)

        def OP_MUL(self):
            return self.getToken(EDBSParser.OP_MUL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMul" ):
                listener.enterMul(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMul" ):
                listener.exitMul(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMul" ):
                return visitor.visitMul(self)
            else:
                return visitor.visitChildren(self)


    class LitContext(Expr_opContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a EDBSParser.Expr_opContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(EDBSParser.NUMBER, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLit" ):
                listener.enterLit(self)
